# text-summarizer

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  template.py
config/: config.yaml
notebooks/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb
src/components/: data_ingestion.py  data_tranformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/config/: configuration.py
src/entity/: __init__.py
src/logging/: __init__.py
src/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/utils/: common.py
