[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Santiago Lopez <santiagolopez@sqdm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
transformers = "^4.30.2"
sacrebleu = "^2.3.1"
rouge-score = "^0.1.2"
py7zr = "^0.20.5"
pandas = "^2.0.3"
nltk = "^3.8.1"
tqdm = "^4.65.0"
pyyaml = "^6.0"
matplotlib = "^3.7.2"
torch = "^2.0.1"
notebook = "^6.5.4"
boto3 = "^1.28.0"
mypy-boto3-s3 = "^1.28.0"
python-box = "6.0.2"
ensure = "1.0.2"
fastapi = "0.78.0"
uvicorn = "0.18.3"
jinja2 = "3.1.2"
datasets = "^2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
